--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "JeanYunqiLuo/JeanYunqiLuo.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profilenew.png"
   name             : "Jean Luo"
   pronouns         : # example: "she/her"  
   bio              : "Postgraduate Student (Theoretical Physics)"
