--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,8 @@ main:
   - title: "Theses & Reports"
     url: /cv/
         
-  - title: "Blog Posts"
+  - title: "Talks & Presentations"
     url: /year-archive/
     
-  - title: "Guide"
+  - title: "Activities"
     url: /markdown/
